[package]
authors = ["Vin Singh <theshampoofactory@gmail.com>"]
edition = "2018"
name = "morscrypta"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["command"]

[dependencies]
aes = "0.8.2"
ctr = "0.9.2"
hkdf = "0.8.0"
hmac = "0.7.1"
pbkdf2 = "0.3.0"
rand_core = "0.5.1"
sha2 = "0.8.1"

x25519-dalek = "0.6.0"

zeroize = "1.1.0"

pem = "0.7.0"
simple_asn1 = "0.4.0"

[dev-dependencies]
hex-literal = "0.2.1"
