[package]
edition = "2021"
name = "morscrypta"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
libmorscrypta = {path = "..", version = "0.2.0"}
rand_core = "0.5.1"
regex = "1.3.5"
x25519-dalek = "1.2.0"
